# elia

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
elia/: app.py  elia.scss  models.py
elia/widgets/: conversation.py
elia_chat/: __main__.py  app.py  chat_manager.py  chats_manager.py  config.py  constants.py  context.py  elia.scss  launch_args.py  locations.py  models.py  new_app.py  runtime_config.py  runtime_options.py  themes.py  time_display.py
elia_chat/database/: converters.py  create_database.py  database.py  elia.sqlite  export_chatgpt.py  import_chatgpt.py  models.py
elia_chat/screens/: chat_details.py  chat_screen.py  help_screen.py  home_screen.py  message_info_modal.py  options_modal.py  rename_chat_screen.py
elia_chat/widgets/: agent_is_typing.py  app_header.py  chat.py  chat_header.py  chat_list.py  chat_options.py  chatbox.py  conversation.py  conversation_header.py  conversation_list.py  conversation_options.py  prompt_input.py  text_area.py  token_analysis.py  vim_mode.py  welcome.py
scripts/: create_database.py
