[project]
name = "elia"
version = "0.5.0"
description = "A terminal interface to ChatGPT."
authors = [
    { name = "Darren Burns", email = "darrenb900@gmail.com" }
]
dependencies = [
    "textual[syntax]==0.58.1",
    "sqlmodel>=0.0.9",
    "humanize>=4.6.0",
    "tiktoken>=0.4.0",
    "click>=8.1.6",
    "langchain-openai>=0.0.5",
    "xdg-base-dirs>=6.0.1",
    "pydantic-settings>=2.2.1",
    "aiosqlite>=0.20.0",
    "langchain-core>=0.1.45",
    "langchain-anthropic>=0.1.11",
    "greenlet>=3.0.3",
    "click-default-group>=1.2.4",
    "litellm>=1.35.38",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
elia = "elia_chat.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.3.0",
    "mypy>=1.3.0",
    "types-peewee>=3.16.0.0",
    "pre-commit>=3.3.2",
    "textual-dev>=1.0.1",
    "pyinstrument>=4.6.2",
]

[tool.mypy]
ignore_missing_imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["elia_chat"]
