[project]
name = "elia_chat"
version = "1.6.1"
description = "A powerful terminal user interface for interacting with large language models."
authors = [
    { name = "Darren Burns", email = "darrenb900@gmail.com" }
]
dependencies = [
    "textual[syntax]>=0.63.2",
    "sqlmodel>=0.0.9",
    "humanize>=4.6.0",
    "click>=8.1.6",
    "xdg-base-dirs>=6.0.1",
    "aiosqlite>=0.20.0",
    "click-default-group>=1.2.4",
    "greenlet>=3.0.3",
    "google-generativeai>=0.5.3",
    "pyperclip>=1.8.2",
    "litellm>=1.37.19",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
elia = "elia_chat.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.3.0",
    "mypy>=1.3.0",
    "types-peewee>=3.16.0.0",
    "pre-commit>=3.3.2",
    "textual-dev>=1.0.1",
    "pyinstrument>=4.6.2",
]

[tool.mypy]
ignore_missing_imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["elia_chat"]
